[project]
name = "disk-usage-audit-skill"
version = "0.1.0"
description = "Clone-aware disk usage audit helpers for the disk-usage-audit skill."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
